test-host-eol/test-host-eol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-host-deploy
  labels:
    app: test-host-deploy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-host-deploy
  template:
    metadata:
      labels:
        app: test-host-deploy
    spec:
      containers:
      - name: nginx-s3-gateway-20230808
        image: ghcr.io/nginxinc/nginx-s3-gateway/nginx-oss-s3-gateway:latest-20230808
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
          limits:
            memory: 500Mi
            cpu: 400m
---
apiVersion: v1
kind: Service
metadata:
  name: test-host-svc
spec:
  selector:
    app: test-host-deploy
  ports:
  - name: "80"
    port: 80
    targetPort: 80
