test-host-eol/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-host-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: test-host-tls-secret
      hosts:
        - test.eol.uchile.cl
  rules:
    - host: test.eol.uchile.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-host-svc
                port:
                  name: http
