test-host-eol/listenerset.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-eol-uchile-cl-https-route
  namespace: test-eol
spec:
  hostnames:
    - test.eol.uchile.cl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: test-listeners
      namespace: test-eol
      sectionName: test-eol-uchile-cl-https
  rules:
    - backendRefs:
        - name: test-host-svc
          namespace: test-eol
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
